<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/search_hint"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_sort_az"
        android:title="@string/sort_a_z"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_za"
        android:title="@string/sort_z_a"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_grid_view"
        android:title="@string/grid_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_list_view"
        android:title="@string/list_view"
        app:showAsAction="never" />
</menu>
